<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thehackerati.android.apps.graphicsonandroid.ShapeViewerActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shapes" />

    <LinearLayout
        android:id="@+id/ButtonRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"></Button>

        <Button
            android:id="@+id/ButtonOval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oval"></Button>

        <Button
            android:id="@+id/ButtonRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangle"></Button>

        <Button
            android:id="@+id/ButtonPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"></Button>

        <Button
            android:id="@+id/ButtonArc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arc"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonRoundRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rnd_rect"></Button>

        <Button
            android:id="@+id/ButtonRoundRect2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rnd_rect_2"></Button>

        <Button
            android:id="@+id/ButtonPath2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path_2"></Button>

        <Button
            android:id="@+id/ButtonPath3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path_3"></Button>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/ImageViewForShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_view_for_shape"
            android:minHeight="100dp"
            android:minWidth="100dp"></ImageView>
    </RelativeLayout>
</LinearLayout>